force-app/main/default/objects/TOP_Table_Column__mdt/TOP_Table_Column__mdt.object-meta.xml
<CustomObject>
    <description>Define attributes of column in the TOP tables</description>
    <label>TOP Table Column</label>
    <pluralLabel>TOP Table Columns</pluralLabel>
</CustomObject>