force-app/main/default/objects/TOP_Table_Column__mdt/fields/Column_Type__c.field-meta.xml
<CustomField>
    <fullName>Column_Type__c</fullName>
    <description>Use standard for common field 1:1 logic, BAN - special picklist to display available Billing Accounts</description>
    <inlineHelpText>Use standard for common field 1:1 logic, BAN - special picklist to display available Billing Accounts</inlineHelpText>
    <label>Column Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>BAN</fullName>
            </value>
            <value>
                <fullName>Checkbox group</fullName>
            </value>
            <value>
                <fullName>Incremental group</fullName>
            </value>
            <value>
                <fullName>Controlled checkbox group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>