force-app/main/default/objects/TOP_Table_Column__mdt/fields/Custom_Component_When_Expanded__c.field-meta.xml
<CustomField>
    <fullName>Custom_Component_When_Expanded__c</fullName>
    <description>Name of the lwc custom component displayed when row is expanded</description>
    <inlineHelpText>Name of the lwc custom component displayed when row is expanded</inlineHelpText>
    <label>Custom Component When Expanded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>