force-app/main/default/objects/TOP_Table_Column__mdt/fields/Custom_Component_When_Modal__c.field-meta.xml
<CustomField>
    <fullName>Custom_Component_When_Modal__c</fullName>
    <description>Name of the lwc custom component displayed when edit icon is clicked to display row details in modal box</description>
    <inlineHelpText>Name of the lwc custom component displayed when edit icon is clicked to display row details in modal box</inlineHelpText>
    <label>Custom Component When Modal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>