force-app/main/default/objects/TOP_Table_Column__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <inlineHelpText>Default value assigned in the beginning of the activation (for checkbox field use true/false, for picklist use the picklist option api value)</inlineHelpText>
    <label>Default Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>