force-app/main/default/objects/TOP_Table_Column__mdt/fields/Filter_Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Filter_Picklist_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filter picklist Options by quote to hide options which customer did not buy.</description>
    <inlineHelpText>Filter picklist Options by quote to hide options which customer did not buy.</inlineHelpText>
    <label>Filter Picklist Options</label>
    <type>Checkbox</type>
</CustomField>