force-app/main/default/objects/TOP_Table_Column__mdt/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Reference to custom label to display help text for field like Placeholder, First Picklist Option...For checkbox group it is comma separated list in format ValueToDisplay|fieldname like USA|VAS_CORUSA5G__c</description>
    <inlineHelpText>Reference to custom label to display help text for field like Placeholder, First Picklist Option...For checkbox group it is comma separated list in format ValueToDisplay|fieldname like USA|VAS_CORUSA5G__c</inlineHelpText>
    <label>Help Text (Custom Label Ref)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>