force-app/main/default/objects/TOP_Table_Column__mdt/fields/Is_Edit_Details_In_Modal_Box__c.field-meta.xml
<CustomField>
    <fullName>Is_Edit_Details_In_Modal_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Special type of column to display icon to edit details in custom lwc component</description>
    <inlineHelpText>Special type of column to display icon to edit details in custom lwc component</inlineHelpText>
    <label>Is Edit Details In Modal Box</label>
    <type>Checkbox</type>
</CustomField>