force-app/main/default/objects/TOP_Table_Column__mdt/fields/Is_Editable__c.field-meta.xml
<CustomField>
    <fullName>Is_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Read only or editable value</description>
    <inlineHelpText>Read only or editable value</inlineHelpText>
    <label>Is Editable</label>
    <type>Checkbox</type>
</CustomField>