force-app/main/default/objects/TOP_Table_Column__mdt/fields/Is_Expandable__c.field-meta.xml
<CustomField>
    <fullName>Is_Expandable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Option to expand row and display extra lwc component with custom logic</description>
    <inlineHelpText>Option to expand row and display extra lwc component with custom logic</inlineHelpText>
    <label>Is Expandable</label>
    <type>Checkbox</type>
</CustomField>