force-app/main/default/objects/TOP_Table_Column__mdt/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick when field is mandatory, star icon in column label is displayed</description>
    <inlineHelpText>Tick when field is mandatory, star icon in column label is displayed</inlineHelpText>
    <label>Is Mandatory (star icon)</label>
    <type>Checkbox</type>
</CustomField>