force-app/main/default/objects/TOP_Table_Column__mdt/fields/Is_Mass_Editable__c.field-meta.xml
<CustomField>
    <fullName>Is_Mass_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Able to pop up the box to mass update the selected rows when in selected rows</description>
    <inlineHelpText>Able to pop up the box to mass update the selected rows when in selected rows</inlineHelpText>
    <label>Is Mass Editable</label>
    <type>Checkbox</type>
</CustomField>