force-app/main/default/objects/TOP_Table_Column__mdt/fields/Is_Searchable__c.field-meta.xml
<CustomField>
    <fullName>Is_Searchable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include field into the filter logic</description>
    <inlineHelpText>Include field into the filter logic</inlineHelpText>
    <label>Is Searchable</label>
    <type>Checkbox</type>
</CustomField>