force-app/main/default/objects/TOP_Table_Column__mdt/fields/Is_Sortable__c.field-meta.xml
<CustomField>
    <fullName>Is_Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Table column can be sorted</description>
    <inlineHelpText>Table column can be sorted</inlineHelpText>
    <label>Is Sortable</label>
    <type>Checkbox</type>
</CustomField>