force-app/main/default/objects/TOP_Table_Column__mdt/fields/Is_Validation_Icon__c.field-meta.xml
<CustomField>
    <fullName>Is_Validation_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it the special type of the column - validation status icon?</description>
    <inlineHelpText>Is it the special type of the column - validation status icon?</inlineHelpText>
    <label>Is Validation Icon</label>
    <type>Checkbox</type>
</CustomField>