force-app/main/default/objects/TOP_Table_Column__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Column label is default calculated by field label, use custom label API name to override it otherwise leave it blank</description>
    <inlineHelpText>Column label is default calculated by field label, use custom label API name to override it otherwise leave it blank</inlineHelpText>
    <label>Label (override logic by custom label)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>