force-app/main/default/objects/TOP_Table_Column__mdt/fields/Only_for_TPX__c.field-meta.xml
<CustomField>
    <fullName>Only_for_TPX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only for TPX</label>
    <type>Checkbox</type>
</CustomField>