force-app/main/default/objects/TOP_Table_Column__mdt/fields/Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Options__c</fullName>
    <description>Custom label with comma (new line) separated picklist options (label|api value)</description>
    <inlineHelpText>Custom label with comma (new line) separated picklist options (label|api value)</inlineHelpText>
    <label>Picklist Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>