force-app/main/default/objects/TOP_Table_Column__mdt/fields/Product_Code_Filter__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Filter__c</fullName>
    <description>Leave it empty when no filter to apply otherwise comma separated product codes</description>
    <inlineHelpText>Leave it empty when no filter to apply otherwise comma separated product codes</inlineHelpText>
    <label>Product Code Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>