force-app/main/default/objects/TOP_Table_Column__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Activation line record when having pick-list fields to apply right pick-list values set</description>
    <inlineHelpText>Activation line record when having pick-list fields to apply right pick-list values set</inlineHelpText>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>