force-app/main/default/objects/TOP_Table_Column__mdt/fields/Skip_Mandatory_Logic__c.field-meta.xml
<CustomField>
    <fullName>Skip_Mandatory_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is skipped in the validation mandatory logic, but still has the star icon before the column label. Extra validation logic in managed in the utility component.</description>
    <inlineHelpText>This field is skipped in the validation mandatory logic, but still has the star icon before the column label. Extra validation logic in managed in the utility component.</inlineHelpText>
    <label>Skip Mandatory Logic</label>
    <type>Checkbox</type>
</CustomField>