force-app/main/default/objects/TOP_Table_Column__mdt/fields/Sub_Value__c.field-meta.xml
<CustomField>
    <fullName>Sub_Value__c</fullName>
    <description>Field API name of referenced field to display its value, when values from max 3 fields use comma to separate the names</description>
    <inlineHelpText>Field API name of referenced field to display its value, when values from max 3 fields use comma to separate the names</inlineHelpText>
    <label>Sub Value (field name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>