force-app/main/default/objects/TOP_Table_Column__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Field API name of referenced field to display its value</description>
    <inlineHelpText>Field API name of referenced field to display its value</inlineHelpText>
    <label>Value (field name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>