force-app/main/default/objects/TOP_Table_Column__mdt/listViews/All_With_CustomLabels.listView-meta.xml
<ListView>
    <fullName>All_With_CustomLabels</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Value__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Label__c</columns>
    <columns>Help_Text__c</columns>
    <columns>Product_Code_Filter__c</columns>
    <columns>Is_Editable__c</columns>
    <columns>Is_Mass_Editable__c</columns>
    <columns>Is_Sortable__c</columns>
    <columns>Is_Searchable__c</columns>
    <columns>Is_Mandatory__c</columns>
    <columns>Sub_Value__c</columns>
    <columns>Column_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All With Custom Labels</label>
    <language>en_US</language>
</ListView>